# skull-king-bots

./: .gitignore  README.md  pyproject.toml  requirements.txt  train_genetic_bots.ipynb
src/: Controller.py  GameController.py  README.md  main.py
src/game/: Game.py
src/game/cards/: Card.py  CardCollection.py  CharacterCard.py  NumberCard.py  Trick.py
src/game/players/: ComputerPlayer.py  HumanPlayer.py  Player.py
src/model/: Game.py  README.md
src/model/cards/: AnimalCard.py  CardCollection.py  CharacterCard.py  NumberCard.py
src/model/players/: ComputerPlayer.py  GeneticBot.py  HumanPlayer.py  MiniMaxPlayer.py  Player.py  ProbaBot.py  ProbaPlayer.py  RandomBot.py  RandomPlayer.py  TemplateBot.py  TrickCompletionBot.py
src/view/: ConsoleGraphics.py  Graphics.py  NoGraphics.py  PygameGraphics.py  README.md  TkinterGraphics.py  TkinterGraphics2.py
tests/: win_tricks.py
