[project]
name = "skull-king-bots"
version = "2.0.0"
description = "Implementation of the Skull King game for developing bots and testing strategies."
readme = "README.md"
authors = [
  { name = "Eliot CHRISTON", email = "eliot.christon@gmail.com" },
]

requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "pygame>=2.5.0",
  "pygame_widgets==1.1.5",

]
urls.repository = "https://github.com/eliot-christon/skull-king-bots"
[project.optional-dependencies]
dev = [
  "pillow>=10.3.0",
  "pylint==3.3.7",
  "tensorflow",
  "tqdm"
]

[tool.pylint]
max-line-length = 100
max-positional-arguments = 10
max-args = 10
max-nested-blocks = 10
min-public-methods = 0
max-attributes = 10
max-locals = 20
max-branches = 25
disable = [
  "missing-module-docstring",
  "missing-function-docstring",
  "missing-class-docstring",
  "line-too-long",
]
unsafe-load-any-extension = true